--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 1em;
 
     position: absolute;
     overflow: hidden;
@@ -77,7 +78,7 @@ ul {
     padding: 0;
 }
 ul li {
-    margin: 10px 0;
+    margin: 5px 0;
     display: flex;
     align-items: center;
 }
@@ -96,6 +97,9 @@ h1 {
 }
 h2 {
     border-bottom: 1px solid #ccc;
+    margin: 10px;
+    text-align: center;
+    width: fit-content;
 }
 .job-title {
     font-weight: bold;
@@ -213,14 +217,14 @@ a:hover {
 }
 ._robine{
     top:390px;
-    width: 540px;
-    left:460px;
+    width: 500px;
+    left:500px;
     height: fit-content;
 }
 ._crsvamic{
     top:390px;
-    width: 440px;
-    height: 222px;
+    width: 480px;
+    height: 204px;
 }
 
 
@@ -316,7 +320,7 @@ ul{
 
     .page-section{
         width: 80%;
-        font-size: 1.5em;
+        font-size: 1.1em;
         padding-block:30px;
         height: fit-content !important;
     }
@@ -331,10 +335,10 @@ ul{
 
 @media (max-width: 900px) {
     h1{
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
     .page-section{
-        font-size: 1.6em;
+        font-size: 1.2em;
     }
     ._portrait{
         width: 50% !important;
